Add Call to Action Section

--- a/index.html
+++ b/index.html
@@ -88,6 +88,19 @@
         </div>
   
     </section>
+
+    <section class="cta">
+        <div class="container">
+
+            <div class="text-content">
+                <h3>Call to action! It's time!</h3>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+
+            <button>Sign up</button>
+
+        </div>
+    </section>
     
 </body>
 </html>
