--- a/index.html
+++ b/index.html
@@ -102,5 +102,11 @@
         </div>
     </section>
     
+
+    <footer>
+        <div class="container">
+            <p>Copyright &#169; Danilo Radeka 2023</p> 
+        </div>
+    </footer>
 </body>
 </html>
